--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+<!-- <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
 
   <label for="first-name">First Name: </label>
   <input id="first-name" type="text" formControlName="firstName">
@@ -38,4 +38,40 @@
 
 </form>
 
-<button type="button" (click)="updateProfile()">Update Profile</button>
+<button type="button" (click)="updateProfile()">Update Profile</button> -->
+
+<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+  <div>
+    <label for="userName">username*: </label>
+    <input id="userName" type="text" formControlName="userName">
+  </div>
+  <div>
+    <label for="email">email*: </label>
+    <input id="email" type="email" formControlName="email">
+  </div>
+  <div>
+    <label for="password">password*: </label>
+    <input id="password" type="password" formControlName="password">
+  </div>
+  <div>
+    <label for="country">country: </label>
+    <input id="country" type="text" formControlName="country">
+  </div>
+  <div>
+    <label for="yob">year of birth*: </label>
+    <input id="yob" type="number" formControlName="yob">
+  </div>
+  <label for="gender">gender: </label>
+  <select id="gender" formControlName="gender">
+    <option value=""></option>
+    <option value="male">male</option>
+    <option value="female">female</option>
+    <option value="other">non mi riconosco in nessuno dei precedenti</option>
+  </select>
+  <div>
+    <label for="phoneNumber">phone number: </label>
+    <input id="phoneNumber" type="text" formControlName="phoneNumber">
+  </div>
+
+  <button type="submit" [disabled]="!registerForm.valid">Submit</button>
+</form>
