--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,11 @@
-<p>login works!</p>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <div>
+    <label for="userName">username*: </label>
+    <input id="userName" type="text" formControlName="userName">
+  </div>
+  <div>
+    <label for="password">password*: </label>
+    <input id="password" type="password" formControlName="password">
+  </div>
+ <button type="submit" [disabled]="!loginForm.valid">Login</button>
+</form>
